page wrapper spacing fix

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ span{
 	position:relative;
 	left:50%;
 	margin-left:-450px;
-	padding:10px 10px 10px 10px;
+	padding:10px 10px 35px 10px;
 	display: none;
 	background:#fff;
 	z-index: 0;
